fix: breadcrumb area alignment

--- a/src/layouts/sidebar-sidecar/sidebar-sidecar-layout.module.css
+++ b/src/layouts/sidebar-sidecar/sidebar-sidecar-layout.module.css
@@ -100,18 +100,29 @@ for further details.
 	}
 }
 
-/* .breadcrumbOptOutGroup establishes an area that spans the padded area.
+/* .breadcrumbContainer establishes an area that spans the padded area.
    We need to align its width with the main+sidecar area below it,
 	 to prevent very long breadcrumbs from causing maxWidthWrapper to grow
 	 beyond our desired max-width. */
-.breadcrumbOptOutGroup {
+.breadcrumbContainer {
 	align-items: baseline;
-	align-self: flex-start;
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 32px;
-	max-width: var(--main-element-max-width);
+	max-width: calc(
+		var(--main-element-max-width) + var(--sidecar-spacing) +
+			var(--sidecar-width)
+	);
 	width: 100%;
+}
+
+/* We want to limit the breadcrumb row content to be the width
+   of the main content area only. */
+.breadcrumbMaxWidth {
+	align-self: flex-start;
+	display: flex;
+	justify-content: space-between;
+	max-width: var(--main-element-max-width);
 }
 
 /* .mainAndSidecar spans the padded area, and lays out main + sidecar. */
